# xpconf

./: README.md  pyproject.toml
src/xpconf/: __init__.py
tests/: test_xpconf.py
