[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xpconf"
version = "0.1.0"
description = "A minimal ML configuration library with reactive references, freezing, and lossless serialization."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Blair Johnson", email = "blairjohnson@gatech.edu" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml>=6.0",
    "cloudpickle>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/blair-johnson/xpconf"

[tool.hatch.build.targets.wheel]
packages = ["src/xpconf"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
